--- a/SmartGel/Base.lproj/Main.storyboard
+++ b/SmartGel/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -567,22 +568,107 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mti-JJ-TNl">
-                                <rect key="frame" x="300" y="790" width="168" height="70"/>
-                                <color key="backgroundColor" red="0.72549019609999998" green="0.2901960784" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l5s-OR-tih">
+                                <rect key="frame" x="192.5" y="154" width="384" height="512"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LW3-Sb-L52">
+                                        <rect key="frame" x="0.0" y="0.0" width="384" height="432"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WBi-mO-HMt">
+                                                <rect key="frame" x="0.0" y="0.0" width="190" height="388"/>
+                                                <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dxx-6W-icy">
+                                                <rect key="frame" x="194" y="0.0" width="190" height="388"/>
+                                                <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                            </view>
+                                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Smiley_green.png" translatesAutoresizingMaskIntoConstraints="NO" id="2lZ-2n-vBh">
+                                                <rect key="frame" x="146.5" y="171" width="90" height="90"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="WBi-mO-HMt" firstAttribute="width" secondItem="LW3-Sb-L52" secondAttribute="width" multiplier="0.495" id="1Bs-xG-sf2"/>
+                                            <constraint firstItem="dxx-6W-icy" firstAttribute="top" secondItem="LW3-Sb-L52" secondAttribute="top" id="6mD-Ny-f1m"/>
+                                            <constraint firstItem="2lZ-2n-vBh" firstAttribute="centerY" secondItem="LW3-Sb-L52" secondAttribute="centerY" id="Bo8-UM-7FB"/>
+                                            <constraint firstAttribute="bottom" secondItem="WBi-mO-HMt" secondAttribute="bottom" constant="44" id="IbL-mo-ePC"/>
+                                            <constraint firstItem="2lZ-2n-vBh" firstAttribute="centerX" secondItem="LW3-Sb-L52" secondAttribute="centerX" id="QEQ-7l-sol"/>
+                                            <constraint firstItem="WBi-mO-HMt" firstAttribute="leading" secondItem="LW3-Sb-L52" secondAttribute="leading" id="Rtv-af-OxW"/>
+                                            <constraint firstItem="dxx-6W-icy" firstAttribute="width" secondItem="WBi-mO-HMt" secondAttribute="width" id="W1g-JO-2Ga"/>
+                                            <constraint firstAttribute="bottom" secondItem="dxx-6W-icy" secondAttribute="bottom" constant="44" id="dy5-ls-a9b"/>
+                                            <constraint firstAttribute="trailing" secondItem="dxx-6W-icy" secondAttribute="trailing" id="jCU-2d-sxt"/>
+                                            <constraint firstItem="WBi-mO-HMt" firstAttribute="top" secondItem="LW3-Sb-L52" secondAttribute="top" id="zRw-mv-oth"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hlt-rA-KL6">
+                                        <rect key="frame" x="0.0" y="462" width="384" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2AE-LK-ISj">
+                                                <rect key="frame" x="192" y="25.5" width="0.0" height="0.0"/>
+                                                <color key="backgroundColor" red="0.19607843137254902" green="0.22745098039215686" blue="0.27058823529411763" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rQs-fV-BGo">
+                                                <rect key="frame" x="200" y="5" width="0.0" height="0.0"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BlB-3X-Cq7">
+                                                <rect key="frame" x="200.5" y="10" width="0.0" height="0.0"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.19607843137254902" green="0.22745098039215686" blue="0.27058823529411763" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="2AE-LK-ISj" firstAttribute="centerY" secondItem="hlt-rA-KL6" secondAttribute="centerY" id="BYg-x2-RqZ"/>
+                                            <constraint firstItem="rQs-fV-BGo" firstAttribute="leading" secondItem="2AE-LK-ISj" secondAttribute="trailing" constant="8" id="IOQ-mp-rJp"/>
+                                            <constraint firstItem="2AE-LK-ISj" firstAttribute="centerX" secondItem="hlt-rA-KL6" secondAttribute="centerX" id="R6f-Jm-f3O"/>
+                                            <constraint firstItem="rQs-fV-BGo" firstAttribute="top" secondItem="hlt-rA-KL6" secondAttribute="top" constant="5" id="S7q-IE-wUu"/>
+                                            <constraint firstItem="BlB-3X-Cq7" firstAttribute="top" secondItem="rQs-fV-BGo" secondAttribute="bottom" constant="5" id="WDC-4e-eiq"/>
+                                            <constraint firstAttribute="height" constant="50" id="byo-Yw-F1w"/>
+                                            <constraint firstItem="BlB-3X-Cq7" firstAttribute="leading" secondItem="2AE-LK-ISj" secondAttribute="trailing" constant="8" id="z4f-Pb-1pi"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="168" id="BAf-1F-Fad"/>
-                                    <constraint firstAttribute="height" constant="70" id="Rvd-5C-k8r"/>
+                                    <constraint firstItem="LW3-Sb-L52" firstAttribute="leading" secondItem="l5s-OR-tih" secondAttribute="leading" id="Bce-Cv-tfg"/>
+                                    <constraint firstAttribute="trailing" secondItem="LW3-Sb-L52" secondAttribute="trailing" id="Isv-QE-eFy"/>
+                                    <constraint firstItem="hlt-rA-KL6" firstAttribute="leading" secondItem="l5s-OR-tih" secondAttribute="leading" id="ffm-dU-efA"/>
+                                    <constraint firstAttribute="trailing" secondItem="hlt-rA-KL6" secondAttribute="trailing" id="jZo-uy-6sG"/>
+                                    <constraint firstItem="LW3-Sb-L52" firstAttribute="top" secondItem="l5s-OR-tih" secondAttribute="top" id="jxr-x4-kuk"/>
+                                    <constraint firstItem="hlt-rA-KL6" firstAttribute="top" secondItem="LW3-Sb-L52" secondAttribute="bottom" constant="30" id="lsv-Cp-twy"/>
+                                    <constraint firstAttribute="bottom" secondItem="hlt-rA-KL6" secondAttribute="bottom" id="ow7-Ch-rci"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mti-JJ-TNl">
+                                <rect key="frame" x="284.5" y="914" width="200" height="50"/>
+                                <color key="backgroundColor" red="0.94901960780000005" green="0.47843137250000001" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="EJ8-oU-wFu"/>
+                                    <constraint firstAttribute="height" constant="50" id="hBf-Wg-bga"/>
                                 </constraints>
                                 <state key="normal" title="Take a Photo">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="launchPhotoPickerController" destination="o4L-Oo-xZl" eventType="touchUpInside" id="E22-dE-EcD"/>
+                                </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.19607843137254902" green="0.22745098039215686" blue="0.27058823529411763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.14901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="mti-JJ-TNl" firstAttribute="centerX" secondItem="1Pi-zq-pTs" secondAttribute="centerX" id="Lkz-ul-hxT"/>
-                            <constraint firstItem="wXQ-QE-nz5" firstAttribute="top" secondItem="mti-JJ-TNl" secondAttribute="bottom" constant="120" id="P6p-rK-q7D"/>
+                            <constraint firstItem="mti-JJ-TNl" firstAttribute="centerX" secondItem="1Pi-zq-pTs" secondAttribute="centerX" id="6gv-a1-4g3"/>
+                            <constraint firstItem="l5s-OR-tih" firstAttribute="centerX" secondItem="1Pi-zq-pTs" secondAttribute="centerX" id="93k-yf-651"/>
+                            <constraint firstItem="l5s-OR-tih" firstAttribute="top" secondItem="5iw-2K-Hjr" secondAttribute="bottom" constant="90" id="DYT-BS-sTt"/>
+                            <constraint firstItem="wXQ-QE-nz5" firstAttribute="top" secondItem="mti-JJ-TNl" secondAttribute="bottom" constant="60" id="HTQ-0N-APV"/>
+                            <constraint firstItem="l5s-OR-tih" firstAttribute="width" secondItem="1Pi-zq-pTs" secondAttribute="width" multiplier="0.5" id="Rma-RH-b7I"/>
+                            <constraint firstItem="l5s-OR-tih" firstAttribute="height" secondItem="1Pi-zq-pTs" secondAttribute="height" multiplier="0.5" id="uuC-dV-eL7"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -594,7 +680,15 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="blankView" destination="WBi-mO-HMt" id="Sn2-Kt-Oo4"/>
+                        <outlet property="lbldiam" destination="BlB-3X-Cq7" id="Yti-cl-R4d"/>
+                        <outlet property="lblugormg" destination="rQs-fV-BGo" id="hJ6-h4-GRJ"/>
+                        <outlet property="resultValueLabel" destination="2AE-LK-ISj" id="nTv-Dt-ew3"/>
+                        <outlet property="resultfoxImageView" destination="2lZ-2n-vBh" id="Rsh-Rc-YFg"/>
+                        <outlet property="sampleView" destination="dxx-6W-icy" id="rAH-xf-juT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pZA-3u-Mx8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -969,6 +1063,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Smiley_green.png" width="90" height="90"/>
         <image name="ic_back" width="18" height="18"/>
         <image name="ic_location" width="24" height="24"/>
         <image name="ic_menu" width="19" height="20"/>
